parser.output
State 14 conflicts: 3 shift/reduce, 1 reduce/reduce
State 24 conflicts: 3 shift/reduce, 1 reduce/reduce
State 52 conflicts: 3 shift/reduce
State 55 conflicts: 3 shift/reduce
State 56 conflicts: 7 shift/reduce
State 64 conflicts: 3 shift/reduce
State 97 conflicts: 11 shift/reduce
State 119 conflicts: 11 shift/reduce
State 120 conflicts: 11 shift/reduce
State 121 conflicts: 11 shift/reduce
State 122 conflicts: 11 shift/reduce
State 123 conflicts: 11 shift/reduce
State 124 conflicts: 11 shift/reduce
State 125 conflicts: 11 shift/reduce
State 126 conflicts: 11 shift/reduce
State 127 conflicts: 11 shift/reduce


Grammar

    0 $accept: Goal $end

    1 Goal: MainClass ClassDeclaration END

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    3 ClassDeclaration: CLASS Identifier '{' ClassBodyDeclaration '}'
    4                 | CLASS Identifier EXTENDS Identifier '{' ClassBodyDeclaration '}'

    5 ClassBodyDeclaration: VarDeclaration MethodDeclaration
    6                     | %empty

    7 VarDeclaration: VarDeclaration Type Identifier ';'
    8               | Type Identifier ';'
    9               | %empty

   10 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'
   11                  | %empty

   12 MethodArgumentDeclaration: Type Identifier
   13                          | MethodArgumentDeclaration ',' Type Identifier
   14                          | %empty

   15 MethodVarDeclaration: MethodVarDeclaration VarDeclaration
   16                     | VarDeclaration

   17 MethodStatementDeclaration: MethodStatementDeclaration Statement
   18                           | Statement

   19 Type: T_Int '[' ']'
   20     | T_Bool
   21     | T_Int
   22     | Identifier

   23 Statement: '{' Statement Statement '}'
   24          | '{' Statement '}'
   25          | IF '(' Expression ')' Statement ELSE Statement
   26          | WHILE '(' Expression ')' Statement
   27          | SYS_PRINTLN '(' Expression ')' ';'
   28          | Identifier '=' Expression ';'
   29          | Identifier '[' Expression ']' '=' Expression ';'

   30 Expression: Expression AND Expression
   31           | Expression OR Expression
   32           | Expression LT Expression
   33           | Expression GT Expression
   34           | Expression EQ Expression
   35           | Expression PLUSOP Expression
   36           | Expression MINOP Expression
   37           | Expression MULOP Expression
   38           | Expression DIVOP Expression
   39           | Expression '[' Expression ']'
   40           | Expression '.' LENGTH
   41           | Expression '.' Identifier '(' ')'
   42           | INTEGER_LITERAL
   43           | T_True
   44           | T_False
   45           | Identifier
   46           | THIS
   47           | NEW T_Int '[' Expression ']'
   48           | NEW Identifier '(' FunctionCallDeclaration ')'
   49           | '!' Expression
   50           | '(' Expression ')'

   51 FunctionCallDeclaration: FunctionCallDeclaration ',' Expression
   52                        | Expression
   53                        | %empty

   54 Identifier: IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 49
    '(' (40) 2 10 25 26 27 41 48 50
    ')' (41) 2 10 25 26 27 41 48 50
    ',' (44) 13 51
    '.' (46) 40 41
    ';' (59) 7 8 10 27 28 29
    '=' (61) 28 29
    '[' (91) 2 19 29 39 47
    ']' (93) 2 19 29 39 47
    '{' (123) 2 3 4 10 23 24
    '}' (125) 2 3 4 10 23 24
    error (256)
    INTEGER_LITERAL (258) 42
    IDENTIFIER <std::string> (259) 54
    END (260) 1
    CLASS (261) 2 3 4
    PUBLIC (262) 2 10
    STATIC (263) 2
    VOID (264) 2
    MAIN (265) 2
    EXTENDS (266) 4
    STRING (267) 2
    RETURN (268) 10
    LENGTH (269) 40
    IF (270) 25
    ELSE (271) 25
    WHILE (272) 26
    SYS_PRINTLN (273) 27
    T_Int (274) 19 21 47
    T_Bool (275) 20
    T_True (276) 43
    T_False (277) 44
    PLUSOP (278) 35
    MINOP (279) 36
    MULOP (280) 37
    DIVOP (281) 38
    AND (282) 30
    OR (283) 31
    EQ (284) 34
    LT (285) 32
    GT (286) 33
    THIS (287) 46
    NEW (288) 47 48


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    Goal (46)
        on left: 1
        on right: 0
    MainClass (47)
        on left: 2
        on right: 1
    ClassDeclaration (48)
        on left: 3 4
        on right: 1
    ClassBodyDeclaration (49)
        on left: 5 6
        on right: 3 4
    VarDeclaration (50)
        on left: 7 8 9
        on right: 5 7 15 16
    MethodDeclaration (51)
        on left: 10 11
        on right: 5 10
    MethodArgumentDeclaration (52)
        on left: 12 13 14
        on right: 10 13
    MethodVarDeclaration (53)
        on left: 15 16
        on right: 10 15
    MethodStatementDeclaration (54)
        on left: 17 18
        on right: 10 17
    Type (55)
        on left: 19 20 21 22
        on right: 7 8 10 12 13
    Statement (56)
        on left: 23 24 25 26 27 28 29
        on right: 2 17 18 23 24 25 26
    Expression (57)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 10 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 47 49 50 51 52
    FunctionCallDeclaration (58)
        on left: 51 52 53
        on right: 48 51
    Identifier (59)
        on left: 54
        on right: 2 3 4 7 8 10 12 13 22 28 29 41 45 48


State 0

    0 $accept: . Goal $end

    CLASS  shift, and go to state 1

    Goal       go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: CLASS . Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 5


State 2

    0 $accept: Goal . $end

    $end  shift, and go to state 6


State 3

    1 Goal: MainClass . ClassDeclaration END

    CLASS  shift, and go to state 7

    ClassDeclaration  go to state 8


State 4

   54 Identifier: IDENTIFIER .

    $default  reduce using rule 54 (Identifier)


State 5

    2 MainClass: CLASS Identifier . '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    '{'  shift, and go to state 9


State 6

    0 $accept: Goal $end .

    $default  accept


State 7

    3 ClassDeclaration: CLASS . Identifier '{' ClassBodyDeclaration '}'
    4                 | CLASS . Identifier EXTENDS Identifier '{' ClassBodyDeclaration '}'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 10


State 8

    1 Goal: MainClass ClassDeclaration . END

    END  shift, and go to state 11


State 9

    2 MainClass: CLASS Identifier '{' . PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    PUBLIC  shift, and go to state 12


State 10

    3 ClassDeclaration: CLASS Identifier . '{' ClassBodyDeclaration '}'
    4                 | CLASS Identifier . EXTENDS Identifier '{' ClassBodyDeclaration '}'

    EXTENDS  shift, and go to state 13
    '{'      shift, and go to state 14


State 11

    1 Goal: MainClass ClassDeclaration END .

    $default  reduce using rule 1 (Goal)


State 12

    2 MainClass: CLASS Identifier '{' PUBLIC . STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    STATIC  shift, and go to state 15


State 13

    4 ClassDeclaration: CLASS Identifier EXTENDS . Identifier '{' ClassBodyDeclaration '}'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 16


State 14

    3 ClassDeclaration: CLASS Identifier '{' . ClassBodyDeclaration '}'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    IDENTIFIER  [reduce using rule 9 (VarDeclaration)]
    PUBLIC      reduce using rule 9 (VarDeclaration)
    T_Int       [reduce using rule 9 (VarDeclaration)]
    T_Bool      [reduce using rule 9 (VarDeclaration)]
    '}'         reduce using rule 6 (ClassBodyDeclaration)
    '}'         [reduce using rule 9 (VarDeclaration)]
    $default    reduce using rule 6 (ClassBodyDeclaration)

    ClassBodyDeclaration  go to state 19
    VarDeclaration        go to state 20
    Type                  go to state 21
    Identifier            go to state 22


State 15

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC . VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    VOID  shift, and go to state 23


State 16

    4 ClassDeclaration: CLASS Identifier EXTENDS Identifier . '{' ClassBodyDeclaration '}'

    '{'  shift, and go to state 24


State 17

   19 Type: T_Int . '[' ']'
   21     | T_Int .

    '['  shift, and go to state 25

    $default  reduce using rule 21 (Type)


State 18

   20 Type: T_Bool .

    $default  reduce using rule 20 (Type)


State 19

    3 ClassDeclaration: CLASS Identifier '{' ClassBodyDeclaration . '}'

    '}'  shift, and go to state 26


State 20

    5 ClassBodyDeclaration: VarDeclaration . MethodDeclaration
    7 VarDeclaration: VarDeclaration . Type Identifier ';'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    $default  reduce using rule 11 (MethodDeclaration)

    MethodDeclaration  go to state 27
    Type               go to state 28
    Identifier         go to state 22


State 21

    8 VarDeclaration: Type . Identifier ';'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 29


State 22

   22 Type: Identifier .

    $default  reduce using rule 22 (Type)


State 23

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID . MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    MAIN  shift, and go to state 30


State 24

    4 ClassDeclaration: CLASS Identifier EXTENDS Identifier '{' . ClassBodyDeclaration '}'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    IDENTIFIER  [reduce using rule 9 (VarDeclaration)]
    PUBLIC      reduce using rule 9 (VarDeclaration)
    T_Int       [reduce using rule 9 (VarDeclaration)]
    T_Bool      [reduce using rule 9 (VarDeclaration)]
    '}'         reduce using rule 6 (ClassBodyDeclaration)
    '}'         [reduce using rule 9 (VarDeclaration)]
    $default    reduce using rule 6 (ClassBodyDeclaration)

    ClassBodyDeclaration  go to state 31
    VarDeclaration        go to state 20
    Type                  go to state 21
    Identifier            go to state 22


State 25

   19 Type: T_Int '[' . ']'

    ']'  shift, and go to state 32


State 26

    3 ClassDeclaration: CLASS Identifier '{' ClassBodyDeclaration '}' .

    $default  reduce using rule 3 (ClassDeclaration)


State 27

    5 ClassBodyDeclaration: VarDeclaration MethodDeclaration .
   10 MethodDeclaration: MethodDeclaration . PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    PUBLIC  shift, and go to state 33

    $default  reduce using rule 5 (ClassBodyDeclaration)


State 28

    7 VarDeclaration: VarDeclaration Type . Identifier ';'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 34


State 29

    8 VarDeclaration: Type Identifier . ';'

    ';'  shift, and go to state 35


State 30

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN . '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    '('  shift, and go to state 36


State 31

    4 ClassDeclaration: CLASS Identifier EXTENDS Identifier '{' ClassBodyDeclaration . '}'

    '}'  shift, and go to state 37


State 32

   19 Type: T_Int '[' ']' .

    $default  reduce using rule 19 (Type)


State 33

   10 MethodDeclaration: MethodDeclaration PUBLIC . Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    Type        go to state 38
    Identifier  go to state 22


State 34

    7 VarDeclaration: VarDeclaration Type Identifier . ';'

    ';'  shift, and go to state 39


State 35

    8 VarDeclaration: Type Identifier ';' .

    $default  reduce using rule 8 (VarDeclaration)


State 36

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' . STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    STRING  shift, and go to state 40


State 37

    4 ClassDeclaration: CLASS Identifier EXTENDS Identifier '{' ClassBodyDeclaration '}' .

    $default  reduce using rule 4 (ClassDeclaration)


State 38

   10 MethodDeclaration: MethodDeclaration PUBLIC Type . Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 41


State 39

    7 VarDeclaration: VarDeclaration Type Identifier ';' .

    $default  reduce using rule 7 (VarDeclaration)


State 40

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING . '[' ']' Identifier ')' '{' Statement '}' '}'

    '['  shift, and go to state 42


State 41

   10 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier . '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    '('  shift, and go to state 43


State 42

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' . ']' Identifier ')' '{' Statement '}' '}'

    ']'  shift, and go to state 44


State 43

   10 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' . MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    $default  reduce using rule 14 (MethodArgumentDeclaration)

    MethodArgumentDeclaration  go to state 45
    Type                       go to state 46
    Identifier                 go to state 22


State 44

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' . Identifier ')' '{' Statement '}' '}'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 47


State 45

   10 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration . ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'
   13 MethodArgumentDeclaration: MethodArgumentDeclaration . ',' Type Identifier

    ')'  shift, and go to state 48
    ','  shift, and go to state 49


State 46

   12 MethodArgumentDeclaration: Type . Identifier

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 50


State 47

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier . ')' '{' Statement '}' '}'

    ')'  shift, and go to state 51


State 48

   10 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' . '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    '{'  shift, and go to state 52


State 49

   13 MethodArgumentDeclaration: MethodArgumentDeclaration ',' . Type Identifier

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    Type        go to state 53
    Identifier  go to state 22


State 50

   12 MethodArgumentDeclaration: Type Identifier .

    $default  reduce using rule 12 (MethodArgumentDeclaration)


State 51

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' . '{' Statement '}' '}'

    '{'  shift, and go to state 54


State 52

   10 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' . MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    IDENTIFIER  [reduce using rule 9 (VarDeclaration)]
    T_Int       [reduce using rule 9 (VarDeclaration)]
    T_Bool      [reduce using rule 9 (VarDeclaration)]
    $default    reduce using rule 9 (VarDeclaration)

    VarDeclaration        go to state 55
    MethodVarDeclaration  go to state 56
    Type                  go to state 21
    Identifier            go to state 22


State 53

   13 MethodArgumentDeclaration: MethodArgumentDeclaration ',' Type . Identifier

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 57


State 54

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' . Statement '}' '}'

    IDENTIFIER   shift, and go to state 4
    IF           shift, and go to state 58
    WHILE        shift, and go to state 59
    SYS_PRINTLN  shift, and go to state 60
    '{'          shift, and go to state 61

    Statement   go to state 62
    Identifier  go to state 63


State 55

    7 VarDeclaration: VarDeclaration . Type Identifier ';'
   16 MethodVarDeclaration: VarDeclaration .

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    IDENTIFIER  [reduce using rule 16 (MethodVarDeclaration)]
    T_Int       [reduce using rule 16 (MethodVarDeclaration)]
    T_Bool      [reduce using rule 16 (MethodVarDeclaration)]
    $default    reduce using rule 16 (MethodVarDeclaration)

    Type        go to state 28
    Identifier  go to state 22


State 56

   10 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration . MethodStatementDeclaration RETURN Expression ';' '}'
   15 MethodVarDeclaration: MethodVarDeclaration . VarDeclaration

    IDENTIFIER   shift, and go to state 4
    IF           shift, and go to state 58
    WHILE        shift, and go to state 59
    SYS_PRINTLN  shift, and go to state 60
    T_Int        shift, and go to state 17
    T_Bool       shift, and go to state 18
    '{'          shift, and go to state 61

    IDENTIFIER   [reduce using rule 9 (VarDeclaration)]
    IF           [reduce using rule 9 (VarDeclaration)]
    WHILE        [reduce using rule 9 (VarDeclaration)]
    SYS_PRINTLN  [reduce using rule 9 (VarDeclaration)]
    T_Int        [reduce using rule 9 (VarDeclaration)]
    T_Bool       [reduce using rule 9 (VarDeclaration)]
    '{'          [reduce using rule 9 (VarDeclaration)]

    VarDeclaration              go to state 64
    MethodStatementDeclaration  go to state 65
    Type                        go to state 21
    Statement                   go to state 66
    Identifier                  go to state 67


State 57

   13 MethodArgumentDeclaration: MethodArgumentDeclaration ',' Type Identifier .

    $default  reduce using rule 13 (MethodArgumentDeclaration)


State 58

   25 Statement: IF . '(' Expression ')' Statement ELSE Statement

    '('  shift, and go to state 68


State 59

   26 Statement: WHILE . '(' Expression ')' Statement

    '('  shift, and go to state 69


State 60

   27 Statement: SYS_PRINTLN . '(' Expression ')' ';'

    '('  shift, and go to state 70


State 61

   23 Statement: '{' . Statement Statement '}'
   24          | '{' . Statement '}'

    IDENTIFIER   shift, and go to state 4
    IF           shift, and go to state 58
    WHILE        shift, and go to state 59
    SYS_PRINTLN  shift, and go to state 60
    '{'          shift, and go to state 61

    Statement   go to state 71
    Identifier  go to state 63


State 62

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement . '}' '}'

    '}'  shift, and go to state 72


State 63

   28 Statement: Identifier . '=' Expression ';'
   29          | Identifier . '[' Expression ']' '=' Expression ';'

    '['  shift, and go to state 73
    '='  shift, and go to state 74


State 64

    7 VarDeclaration: VarDeclaration . Type Identifier ';'
   15 MethodVarDeclaration: MethodVarDeclaration VarDeclaration .

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    IDENTIFIER  [reduce using rule 15 (MethodVarDeclaration)]
    T_Int       [reduce using rule 15 (MethodVarDeclaration)]
    T_Bool      [reduce using rule 15 (MethodVarDeclaration)]
    $default    reduce using rule 15 (MethodVarDeclaration)

    Type        go to state 28
    Identifier  go to state 22


State 65

   10 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration . RETURN Expression ';' '}'
   17 MethodStatementDeclaration: MethodStatementDeclaration . Statement

    IDENTIFIER   shift, and go to state 4
    RETURN       shift, and go to state 75
    IF           shift, and go to state 58
    WHILE        shift, and go to state 59
    SYS_PRINTLN  shift, and go to state 60
    '{'          shift, and go to state 61

    Statement   go to state 76
    Identifier  go to state 63


State 66

   18 MethodStatementDeclaration: Statement .

    $default  reduce using rule 18 (MethodStatementDeclaration)


State 67

   22 Type: Identifier .
   28 Statement: Identifier . '=' Expression ';'
   29          | Identifier . '[' Expression ']' '=' Expression ';'

    '['  shift, and go to state 73
    '='  shift, and go to state 74

    $default  reduce using rule 22 (Type)


State 68

   25 Statement: IF '(' . Expression ')' Statement ELSE Statement

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 84
    Identifier  go to state 85


State 69

   26 Statement: WHILE '(' . Expression ')' Statement

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 86
    Identifier  go to state 85


State 70

   27 Statement: SYS_PRINTLN '(' . Expression ')' ';'

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 87
    Identifier  go to state 85


State 71

   23 Statement: '{' Statement . Statement '}'
   24          | '{' Statement . '}'

    IDENTIFIER   shift, and go to state 4
    IF           shift, and go to state 58
    WHILE        shift, and go to state 59
    SYS_PRINTLN  shift, and go to state 60
    '{'          shift, and go to state 61
    '}'          shift, and go to state 88

    Statement   go to state 89
    Identifier  go to state 63


State 72

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' . '}'

    '}'  shift, and go to state 90


State 73

   29 Statement: Identifier '[' . Expression ']' '=' Expression ';'

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 91
    Identifier  go to state 85


State 74

   28 Statement: Identifier '=' . Expression ';'

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 92
    Identifier  go to state 85


State 75

   10 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN . Expression ';' '}'

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 93
    Identifier  go to state 85


State 76

   17 MethodStatementDeclaration: MethodStatementDeclaration Statement .

    $default  reduce using rule 17 (MethodStatementDeclaration)


State 77

   42 Expression: INTEGER_LITERAL .

    $default  reduce using rule 42 (Expression)


State 78

   43 Expression: T_True .

    $default  reduce using rule 43 (Expression)


State 79

   44 Expression: T_False .

    $default  reduce using rule 44 (Expression)


State 80

   46 Expression: THIS .

    $default  reduce using rule 46 (Expression)


State 81

   47 Expression: NEW . T_Int '[' Expression ']'
   48           | NEW . Identifier '(' FunctionCallDeclaration ')'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 94

    Identifier  go to state 95


State 82

   50 Expression: '(' . Expression ')'

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 96
    Identifier  go to state 85


State 83

   49 Expression: '!' . Expression

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 97
    Identifier  go to state 85


State 84

   25 Statement: IF '(' Expression . ')' Statement ELSE Statement
   30 Expression: Expression . AND Expression
   31           | Expression . OR Expression
   32           | Expression . LT Expression
   33           | Expression . GT Expression
   34           | Expression . EQ Expression
   35           | Expression . PLUSOP Expression
   36           | Expression . MINOP Expression
   37           | Expression . MULOP Expression
   38           | Expression . DIVOP Expression
   39           | Expression . '[' Expression ']'
   40           | Expression . '.' LENGTH
   41           | Expression . '.' Identifier '(' ')'

    PLUSOP  shift, and go to state 98
    MINOP   shift, and go to state 99
    MULOP   shift, and go to state 100
    DIVOP   shift, and go to state 101
    AND     shift, and go to state 102
    OR      shift, and go to state 103
    EQ      shift, and go to state 104
    LT      shift, and go to state 105
    GT      shift, and go to state 106
    '['     shift, and go to state 107
    ')'     shift, and go to state 108
    '.'     shift, and go to state 109


State 85

   45 Expression: Identifier .

    $default  reduce using rule 45 (Expression)


State 86

   26 Statement: WHILE '(' Expression . ')' Statement
   30 Expression: Expression . AND Expression
   31           | Expression . OR Expression
   32           | Expression . LT Expression
   33           | Expression . GT Expression
   34           | Expression . EQ Expression
   35           | Expression . PLUSOP Expression
   36           | Expression . MINOP Expression
   37           | Expression . MULOP Expression
   38           | Expression . DIVOP Expression
   39           | Expression . '[' Expression ']'
   40           | Expression . '.' LENGTH
   41           | Expression . '.' Identifier '(' ')'

    PLUSOP  shift, and go to state 98
    MINOP   shift, and go to state 99
    MULOP   shift, and go to state 100
    DIVOP   shift, and go to state 101
    AND     shift, and go to state 102
    OR      shift, and go to state 103
    EQ      shift, and go to state 104
    LT      shift, and go to state 105
    GT      shift, and go to state 106
    '['     shift, and go to state 107
    ')'     shift, and go to state 110
    '.'     shift, and go to state 109


State 87

   27 Statement: SYS_PRINTLN '(' Expression . ')' ';'
   30 Expression: Expression . AND Expression
   31           | Expression . OR Expression
   32           | Expression . LT Expression
   33           | Expression . GT Expression
   34           | Expression . EQ Expression
   35           | Expression . PLUSOP Expression
   36           | Expression . MINOP Expression
   37           | Expression . MULOP Expression
   38           | Expression . DIVOP Expression
   39           | Expression . '[' Expression ']'
   40           | Expression . '.' LENGTH
   41           | Expression . '.' Identifier '(' ')'

    PLUSOP  shift, and go to state 98
    MINOP   shift, and go to state 99
    MULOP   shift, and go to state 100
    DIVOP   shift, and go to state 101
    AND     shift, and go to state 102
    OR      shift, and go to state 103
    EQ      shift, and go to state 104
    LT      shift, and go to state 105
    GT      shift, and go to state 106
    '['     shift, and go to state 107
    ')'     shift, and go to state 111
    '.'     shift, and go to state 109


State 88

   24 Statement: '{' Statement '}' .

    $default  reduce using rule 24 (Statement)


State 89

   23 Statement: '{' Statement Statement . '}'

    '}'  shift, and go to state 112


State 90

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}' .

    $default  reduce using rule 2 (MainClass)


State 91

   29 Statement: Identifier '[' Expression . ']' '=' Expression ';'
   30 Expression: Expression . AND Expression
   31           | Expression . OR Expression
   32           | Expression . LT Expression
   33           | Expression . GT Expression
   34           | Expression . EQ Expression
   35           | Expression . PLUSOP Expression
   36           | Expression . MINOP Expression
   37           | Expression . MULOP Expression
   38           | Expression . DIVOP Expression
   39           | Expression . '[' Expression ']'
   40           | Expression . '.' LENGTH
   41           | Expression . '.' Identifier '(' ')'

    PLUSOP  shift, and go to state 98
    MINOP   shift, and go to state 99
    MULOP   shift, and go to state 100
    DIVOP   shift, and go to state 101
    AND     shift, and go to state 102
    OR      shift, and go to state 103
    EQ      shift, and go to state 104
    LT      shift, and go to state 105
    GT      shift, and go to state 106
    '['     shift, and go to state 107
    ']'     shift, and go to state 113
    '.'     shift, and go to state 109


State 92

   28 Statement: Identifier '=' Expression . ';'
   30 Expression: Expression . AND Expression
   31           | Expression . OR Expression
   32           | Expression . LT Expression
   33           | Expression . GT Expression
   34           | Expression . EQ Expression
   35           | Expression . PLUSOP Expression
   36           | Expression . MINOP Expression
   37           | Expression . MULOP Expression
   38           | Expression . DIVOP Expression
   39           | Expression . '[' Expression ']'
   40           | Expression . '.' LENGTH
   41           | Expression . '.' Identifier '(' ')'

    PLUSOP  shift, and go to state 98
    MINOP   shift, and go to state 99
    MULOP   shift, and go to state 100
    DIVOP   shift, and go to state 101
    AND     shift, and go to state 102
    OR      shift, and go to state 103
    EQ      shift, and go to state 104
    LT      shift, and go to state 105
    GT      shift, and go to state 106
    '['     shift, and go to state 107
    ';'     shift, and go to state 114
    '.'     shift, and go to state 109


State 93

   10 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression . ';' '}'
   30 Expression: Expression . AND Expression
   31           | Expression . OR Expression
   32           | Expression . LT Expression
   33           | Expression . GT Expression
   34           | Expression . EQ Expression
   35           | Expression . PLUSOP Expression
   36           | Expression . MINOP Expression
   37           | Expression . MULOP Expression
   38           | Expression . DIVOP Expression
   39           | Expression . '[' Expression ']'
   40           | Expression . '.' LENGTH
   41           | Expression . '.' Identifier '(' ')'
